# masters-thesis

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
crates/00tcp_subject_selection/: Cargo.toml
crates/00tcp_subject_selection/src/: lib.rs
crates/01fmri_parcellation/: Cargo.toml
crates/01fmri_parcellation/src/: lib.rs
crates/01fmri_parcellation/src/nifti_masker/: labels_masker.rs  signal_masker.rs
crates/01tcp_fmri_parcellation/: Cargo.toml
crates/01tcp_fmri_parcellation/src/: lib.rs
crates/02fmri_segment_trials/: Cargo.toml
crates/02fmri_segment_trials/src/: lib.rs
crates/02tcp_fmri_segment_trials/: Cargo.toml
crates/02tcp_fmri_segment_trials/src/: lib.rs
crates/03cwt/: Cargo.toml
crates/03cwt/src/: lib.rs
crates/03tcp_mvmd/: Cargo.toml
crates/03tcp_mvmd/src/: lib.rs
crates/04mvmd/: Cargo.toml
crates/04mvmd/src/: algorithms.rs  lib.rs
crates/04mvmd/src/algorithms/: admm.rs  mvmd.rs
crates/04tcp_cwt/: Cargo.toml
crates/04tcp_cwt/src/: lib.rs
crates/05hilbert/: Cargo.toml
crates/05hilbert/src/: lib.rs
crates/06fc/: Cargo.toml
crates/06fc/src/: lib.rs
crates/07feature_extraction/: Cargo.toml
crates/07feature_extraction/src/: feature_extractor.rs  lib.rs  preprocessing.rs  strategies.rs
crates/07feature_extraction/src/models/: densenet201.rs
crates/08classification/: Cargo.toml
crates/08classification/src/: analyses.rs  block_ensemble.rs  calibration.rs  classifiers.rs  dataset.rs  dataset_fixes.patch  eval.rs  face_block_averaging.rs  legacy_densenet_fc.rs  lib.rs  metrics.rs  normalizer.rs  splits.rs
crates/08classification/src/analyses/: baseline.rs  baseline_averaging.rs  baseline_img_resize.rs  block_ensemble.rs  face_block_averaging.rs  face_block_averaging_img_resize.rs  face_block_concatenation.rs  face_block_single.rs  face_block_single_img_resize.rs  subject_stratified.rs  task_block.rs
crates/08classification/src/classifiers/: knn.rs  svm.rs
crates/08data_splitting/: Cargo.toml
crates/08data_splitting/src/: lib.rs
crates/09classification/: Cargo.toml
crates/09classification/src/: dataset.rs  lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: annex.rs  bids_filename.rs  istart_config.rs  lib.rs  tcp_config.rs
crates/fc/: Cargo.toml
crates/fc/src/: lib.rs
crates/hdf5_io/src/: lib.rs
crates/istart_subject_selection/: Cargo.toml
crates/istart_subject_selection/src/: lib.rs
crates/nifti_masker/: Cargo.toml
crates/nifti_masker/src/: lib.rs
crates/signals/src/: mvmd.rs
crates/tcp_cwt/: Cargo.toml
crates/tcp_cwt/src/: lib.rs
crates/tcp_fmri/: Cargo.toml
crates/tcp_fmri/src/: lib.rs
crates/tcp_fmri_parcellation/src/: lib.rs
crates/tcp_fmri_preprocess/src/: lib.rs
crates/tcp_fmri_process/: Cargo.toml
crates/tcp_fmri_process/src/: lib.rs  timeseries.rs
crates/tcp_fmri_segment_trials/src/: lib.rs
crates/tcp_preprocess/src/: lib.rs
crates/tcp_subject_selection/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: atlas.rs  bids_filename.rs  bids_subject_id.rs  config.rs  frequency_bands.rs  hdf5_io.rs  lib.rs  polars_csv.rs  roi_migration.rs
scripts/: init.sh  run_pipeline.sh  run_pipeline_with_debug_mode.sh  sys-all_fetch-atlas.sh  sys-all_fetch-weights.sh  sys-idun_build-hdf5.sh  sys-idun_config.sh  sys-idun_env.sh  sys-idun_fetch-slurmjobs.sh  sys-local_install-deps.sh  sys-logger.sh
