[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/config",
  "crates/fc",
  "crates/hdf5_io",
  "crates/nifti_masker",
  "crates/signals",
  "crates/00tcp_subject_selection",
  "crates/01tcp_fmri_parcellation",
  "crates/02tcp_fmri_segment_trials",
  "crates/03tcp_mvmd",
  "crates/04tcp_cwt",
  "crates/tcp_fmri_process",
]

[workspace.dependencies]
anyhow = "1"
hdf5 = "0.8"
ndarray = "0.15.6"
nifti = { version = "0.17.0", features = ["ndarray_volumes", "ndarray"] }
polars  = { version = "0.52.0", features = ["csv", "lazy", "regex", "timezones", "strings", "dtype-full", "round_series", "trigonometry", "polars-ops", "cum_agg"] }
polars-io = "0.52.0"
regex = "1.10.4"
rustfft = "6.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
