[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/utils",
  "crates/00tcp_subject_selection",
  "crates/01fmri_parcellation",
  "crates/02fmri_segment_trials",
  "crates/03cwt",
  "crates/04mvmd",
  "crates/05hilbert",
  "crates/06fc",
  "crates/07feature_extraction",
  "crates/08data_splitting",
  "crates/09classification",
]

[workspace.dependencies]
anyhow = "1"
hdf5 = "0.8"
ndarray = { version = "0.15.6", features = ["rayon"] }
nifti = { version = "0.17.0", features = ["ndarray_volumes", "ndarray"] }
polars  = { version = "0.52.0", features = ["csv", "lazy", "regex", "timezones", "strings", "dtype-full", "round_series", "trigonometry", "polars-ops", "cum_agg"] }
polars-io = "0.52.0"
rayon = "1.10"
regex = "1.10.4"
rustfft = "6.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
