[package]
name = "fmri_parcellation"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.18"

anyhow = { workspace = true }
hdf5 = { workspace = true }
ndarray = { workspace = true }
nifti = { workspace = true }
polars = { workspace = true }
polars-io = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nalgebra = "0.33"

utils = { path = "../utils" }
