[package]
 name = "cwt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
fastcwt = "0.1.9"
scirs2-signal = "0.4.1"
hdf5 = { workspace = true }
ndarray = { workspace = true }
num-complex = "0.4"
# nifti = { workspace = true }
# polars = { workspace = true }
# polars-io = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

utils = { path = "../utils" }
