[package]
name = "mvmd"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = { workspace = true }
anyhow = { workspace = true }
hdf5 = { workspace = true }
ndarray = { workspace = true }
polars = { workspace = true }
polars-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rustfft = { workspace = true }

utils = { path = "../utils" }
