[package]
 name = "data_splitting"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hdf5 = { workspace = true }
tracing = { workspace = true }
polars = { workspace = true }
polars-io = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"

utils = { path = "../utils" }
