[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

config = { path = "../config" }
tcp_subject_selection = { path = "../00tcp_subject_selection" }
fmri_parcellation = { path = "../01fmri_parcellation" }
fmri_segment_trials = { path = "../02fmri_segment_trials" }
cwt = { path = "../03cwt" }
mvmd = { path = "../04mvmd" }
fc = { path = "../06fc" }
tcp_hht = { path = "../05tcp_hilbert_huang" }
fmri_process = { path = "../fmri_process" }
