[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["feature-extraction"]
# Pulls in the 07feature_extraction crate, which depends on libtorch via tch.
# Disable with --no-default-features on hosts without libtorch installed.
feature-extraction = ["dep:feature_extraction"]

[dependencies]
clap = { version = "4", features = ["derive"] }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
polars = { workspace = true }

utils = { path = "../utils" }
tcp_subject_selection = { path = "../00tcp_subject_selection" }
fmri_parcellation = { path = "../01fmri_parcellation" }
fmri_segment_trials = { path = "../02fmri_segment_trials" }
cwt = { path = "../03cwt" }
mvmd = { path = "../04mvmd" }
fc = { path = "../06fc" }
hilbert = { path = "../05hilbert" }
feature_extraction = { path = "../07feature_extraction", optional = true }
classification = { path = "../08classification" }
